@@ -2,6 +2,7 @@ package gollorum.signpost.minecraft.registry;
 
 import gollorum.signpost.minecraft.block.ModelWaystone;
 import gollorum.signpost.minecraft.block.PostBlock;
+import gollorum.signpost.minecraft.block.WaystoneGeneratorBlock;
 import net.minecraft.world.level.block.Block;
 import net.minecraftforge.eventbus.api.IEventBus;
 import net.minecraftforge.registries.DeferredRegister;
@@ -9,7 +10,6 @@ import net.minecraftforge.registries.ForgeRegistries;
 import net.minecraftforge.registries.RegistryObject;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static gollorum.signpost.Signpost.MOD_ID;
 
@@ -21,23 +21,22 @@ public class BlockRegistry {
         Register.register(gollorum.signpost.minecraft.block.WaystoneBlock.REGISTRY_NAME,
             gollorum.signpost.minecraft.block.WaystoneBlock::createInstance);
 
-    private static final List<RegistryObject<Block>> ModelWaystoneBlocks =
-        ModelWaystone.variants.stream()
-            .map(BlockRegistry::registerModelWaystone)
-            .collect(Collectors.toList());
+    private static final List<RegistryObject<ModelWaystone>> ModelWaystoneBlocks =
+        ModelWaystone.variants.stream().map(BlockRegistry::registerModelWaystone).toList();
 
-    private static final List<RegistryObject<Block>> PostBlocks =
-        PostBlock.AllVariants.stream()
-            .map(BlockRegistry::registerPostBlock)
-            .collect(Collectors.toList());
+    private static final List<RegistryObject<PostBlock>> PostBlocks =
+        PostBlock.AllVariants.stream().map(BlockRegistry::registerPostBlock).toList();
 
-    private static RegistryObject<Block> registerPostBlock(PostBlock.Variant variant) {
+    private static RegistryObject<PostBlock> registerPostBlock(PostBlock.Variant variant) {
         return Register.register(variant.registryName, variant::createBlock);
     }
 
-    private static RegistryObject<Block> registerModelWaystone(ModelWaystone.Variant variant) {
+    private static RegistryObject<ModelWaystone> registerModelWaystone(ModelWaystone.Variant variant) {
         return Register.register(variant.registryName, variant::createBlock);
     }
+
+    public static final RegistryObject<WaystoneGeneratorBlock> WaystoneGenerator =
+        Register.register(WaystoneGeneratorBlock.REGISTRY_NAME, WaystoneGeneratorBlock::new);
 
     public static void register(IEventBus bus){
         Register.register(bus);
